@@ -1,6 +1,7 @@
 Revision history for TAP-Parser
 
 2.99_03
+        - Refactored all display specific code out of TAP::Harness.
 
 2.99_02 2007-09-07
         - Ensure prove (and App::Prove) sort any recursively
